--- a/css/agency.css
+++ b/css/agency.css
@@ -177,6 +177,7 @@ header.masthead {
 header.masthead .intro-text {
   padding-top: 150px;
   padding-bottom: 100px;
+  color: #343a40;
 }
 
 header.masthead .intro-text .intro-lead-in {
@@ -288,6 +289,13 @@ header.masthead .intro-text .intro-heading {
   font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+#portfolio .portfolio-item .thumbnail-wrapper {
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+  background-color: #fff;
+}
+
 #portfolio * {
   z-index: 2;
 }
@@ -308,12 +316,11 @@ header.masthead .intro-text .intro-heading {
 }
 
 .portfolio-modal .modal-content {
-  padding: 100px 0;
   text-align: center;
 }
 
 .portfolio-modal .modal-content h2 {
-  font-size: 3em;
+  font-size: 2.5em;
   margin-bottom: 15px;
 }
 
@@ -345,8 +352,8 @@ header.masthead .intro-text .intro-heading {
   position: absolute;
   top: 25px;
   right: 25px;
-  width: 75px;
-  height: 75px;
+  width: 35px;
+  height: 35px;
   cursor: pointer;
   background-color: transparent;
 }
@@ -359,8 +366,8 @@ header.masthead .intro-text .intro-heading {
   /* Safari and Chrome */
   z-index: 1051;
   width: 1px;
-  height: 75px;
-  margin-left: 35px;
+  height: 35px;
+  margin-left: 18px;
   /* IE 9 */
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
@@ -371,7 +378,7 @@ header.masthead .intro-text .intro-heading {
   /* Safari and Chrome */
   z-index: 1052;
   width: 1px;
-  height: 75px;
+  height: 35px;
   /* IE 9 */
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
