--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -10,6 +10,7 @@ header.masthead {
   .intro-text {
     padding-top: 150px;
     padding-bottom: 100px;
+    color: $gray-800;
     .intro-lead-in {
       font-size: 22px;
       font-style: italic;
