--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -57,6 +57,12 @@
         @include serif-font;
       }
     }
+    .thumbnail-wrapper{
+      max-width: 400px;
+      margin: 0 auto;
+      text-align: center;
+      background-color: $white;
+    }
   }
   * {
     z-index: 2;
@@ -77,10 +83,9 @@
     max-width: 100vw;
   }
   .modal-content {
-    padding: 100px 0;
     text-align: center;
     h2 {
-      font-size: 3em;
+      font-size: 2.5em;
       margin-bottom: 15px;
     }
     p {
@@ -107,8 +112,8 @@
     position: absolute;
     top: 25px;
     right: 25px;
-    width: 75px;
-    height: 75px;
+    width: 35px;
+    height: 35px;
     cursor: pointer;
     background-color: transparent;
     &:hover {
@@ -118,8 +123,8 @@
       /* Safari and Chrome */
       z-index: 1051;
       width: 1px;
-      height: 75px;
-      margin-left: 35px;
+      height: 35px;
+      margin-left: 18px;
       /* IE 9 */
       -webkit-transform: rotate(45deg);
       -ms-transform: rotate(45deg);
@@ -129,7 +134,7 @@
         /* Safari and Chrome */
         z-index: 1052;
         width: 1px;
-        height: 75px;
+        height: 35px;
         /* IE 9 */
         -webkit-transform: rotate(90deg);
         -ms-transform: rotate(90deg);
@@ -137,8 +142,5 @@
         background-color: $gray-900;
       }
     }
-  }
-  .modal-backdrop {
-
   }
 }
